# DamMap

./: .cache.sqlite  docker-compose.yml  f1.py  f2.py  forecast.py  index.html  package-lock.json  package.json  server.js  server.py
DamsMap/: index.html  script.js
backend/: Dockerfile  pyproject.toml  server.py
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: Header.jsx  Info.jsx
frontend/src/assets/Javascript/: infoStyles.js  routeStyles.js
frontend/src/assets/styles/: Footer.css
frontend/src/python/: conevo .py  sattelite.py
src/: App.jsx  Food.jsx  Footer.jsx  Header.jsx  HomePage.css  HomePage.jsx  Info.jsx  MapView.jsx  Markers.jsx  Route.jsx  SearchBar.jsx  StartPage.jsx  Stations.jsx  WaterMap.jsx  index.css  main.jsx  pops.css  res.js  search.css  start.css
src/assets/: dams_data.json  images.jfif  pin.jfif
src/assets/Javascript/: infoStyles.js  res.js
src/assets/styles/: Header.css
src/json/: dams_data.json
src/python/json_output/: dam_areas.json
src/styles/: Header.css
