[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "mysql-connector-python>=9.6.0",
    "numpy>=2.4.4",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.2",
    "prophet>=1.3.0",
    "requests-cache>=1.3.1",
    "retry-requests>=2.0.0",
    "waitress>=3.0.2",
]
